tests/snapshots/youtube__music_artist_basic_all.snap
---
source: tests/youtube.rs
expression: artist
---
MusicArtist(
  id: "UCFKUUtHjT4iq3p0JJA13SOA",
  name: "Every Time I Die",
  header_image: "[header_image]",
  description: Some("Every Time I Die is a loud rock institution committed to leaving every nuanced outpouring of chaotic passion and blissful malcontent all over their records and on the stage. With boiling charisma and unrelenting energy to spare, the Buffalo band manages not one but two near-impossible tasks. They’ve survived two decades as an underground entity cherished for coloring outside the lines, and contrary to most career arcs, continually improving with each successive album as they charge ahead.  \n\nETID makes a glorious hardcore-punk noise, alchemized by a swampy summoning of Southern rock’s coarse poetry. The music swirls beneath sardonic and clever wordplay, a combination cementing them as leaders, not followers. The band is recognized and revered for its anarchic explosiveness, artistic impulsiveness, and approachable camaraderie. It’s all interwoven with a visceral lack of the usual fucks. Revolver counted 2016’s Low Teens among the 25 Best Albums of the 2010s, and the follow-up, Radical, is no less revelatory. Once again produced by Will Putney (A Day To Remember, The Ghost Inside, Body Count), Radical is 16 tracks of peak-ETID, including raucous new anthems like “Post-Boredom,” “Planet Shit,” “A Colossal Wreck,” “Desperate Pleasures,” and “AWOL.”"),
  wikipedia_url: None,
  subscriber_count: "[subscriber_count]",
  tracks: "[tracks]",
  albums: [
    AlbumItem(
      id: "MPREb_1WAcRG9Or6Y",
      name: "AWOL",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
          name: "Every Time I Die",
        ),
      ],
      artist_id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
      album_type: single,
      year: Some(2021),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_2ncVzLpAAI8",
      name: "Hot Damn!",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
          name: "Every Time I Die",
        ),
      ],
      artist_id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
      album_type: album,
      year: Some(2003),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_7pqAzvcPDlz",
      name: "New Junk Aesthetic (Deluxe Edition)",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
          name: "Every Time I Die",
        ),
      ],
      artist_id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
      album_type: album,
      year: Some(2009),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_9inZtV1xhrb",
      name: "The Big Dirty",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
          name: "Every Time I Die",
        ),
      ],
      artist_id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
      album_type: album,
      year: Some(2007),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_Lm0z7ZzAIza",
      name: "Last Night In Town",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
          name: "Every Time I Die",
        ),
      ],
      artist_id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
      album_type: album,
      year: Some(2001),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_STqA5MgO6m3",
      name: "Ex Lives (Deluxe Edition)",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
          name: "Every Time I Die",
        ),
      ],
      artist_id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
      album_type: album,
      year: Some(2012),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_adnNFkyYKaI",
      name: "Low Teens (Deluxe Edition)",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
          name: "Every Time I Die",
        ),
      ],
      artist_id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
      album_type: album,
      year: Some(2016),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_eMoEiEI3OYr",
      name: "A Colossal Wreck // Desperate Pleasures",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
          name: "Every Time I Die",
        ),
      ],
      artist_id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
      album_type: single,
      year: Some(2020),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_fnFsgQzeLNk",
      name: "Salem",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
          name: "Every Time I Die",
        ),
      ],
      artist_id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
      album_type: ep,
      year: Some(2015),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_ghrNI6BJSM8",
      name: "Friends And Family",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
          name: "Every Time I Die",
        ),
      ],
      artist_id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
      album_type: album,
      year: Some(2017),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_h0UZr2ALQXf",
      name: "From Parts Unknown (Deluxe Edition)",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
          name: "Every Time I Die",
        ),
      ],
      artist_id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
      album_type: album,
      year: Some(2014),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_hwA5K7iMdvm",
      name: "Radical",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
          name: "Every Time I Die",
        ),
      ],
      artist_id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
      album_type: album,
      year: Some(2021),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_psxr5vulVn8",
      name: "The Burial Plot Bidding War",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
          name: "Every Time I Die",
        ),
      ],
      artist_id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
      album_type: ep,
      year: Some(2000),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_yhvkvc5F70E",
      name: "Gutter Phenomenon",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
          name: "Every Time I Die",
        ),
      ],
      artist_id: Some("UCFKUUtHjT4iq3p0JJA13SOA"),
      album_type: album,
      year: Some(2005),
      by_va: false,
    ),
  ],
  playlists: "[playlists]",
  similar_artists: "[artists]",
  tracks_playlist_id: Some("OLAK5uy_mK5osaO0zr74UgaNu_mTIAd_0kI8yitSM"),
  videos_playlist_id: Some("OLAK5uy_mI8VvWLkZFpXOyez2McOMI1Fc6CE7BIgQ"),
  radio_id: Some("RDEMioQESHiXb-9cWhy0QX4fVg"),
)
