tests/snapshots/youtube__music_artist_basic_intl.snap
---
source: tests/youtube.rs
expression: artist
---
MusicArtist(
  id: "UC7cl4MmM6ZZ2TcFyMk_b4pg",
  name: "[name]",
  header_image: "[header_image]",
  description: "[description]",
  wikipedia_url: "[wikipedia_url]",
  subscriber_count: "[subscriber_count]",
  tracks: "[tracks]",
  albums: [
    AlbumItem(
      id: "MPREb_43NWLzXChnh",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
      album_type: Album,
      year: Some(2010),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_585fV7eqUP8",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
      album_type: Album,
      year: Some(2014),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_6PEkIQE7sWY",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
      album_type: Ep,
      year: Some(2008),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_88p7e6nBtgz",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
      album_type: Single,
      year: Some(2012),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_Md2aZrjaqHX",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
      album_type: Single,
      year: Some(2021),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_OW1GOBZ64ap",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
      album_type: Single,
      year: Some(2018),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_QyGCcLWExXj",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
      album_type: Single,
      year: Some(2014),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_R3p5kDRIGKL",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
      album_type: Album,
      year: Some(2006),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_TiIBQqCFttT",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
      album_type: Album,
      year: Some(2016),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_U9HLD8nF7H5",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
      album_type: Single,
      year: Some(2017),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_V0FEmw2pj2u",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
      album_type: Single,
      year: Some(2017),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_WYx2c0e95TA",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
      album_type: Album,
      year: Some(2008),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_Yj49s4xy7fM",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
      album_type: Single,
      year: Some(2021),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_f4MhYbccbPi",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
      album_type: Album,
      year: Some(2006),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_kW2NAMSZElX",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
      album_type: Single,
      year: Some(2015),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_n1H3JiFyGkv",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
      album_type: Ep,
      year: Some(2015),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_pWpeXxATZYb",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
      album_type: Single,
      year: Some(2014),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_rHhaDLqalbT",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
      album_type: Ep,
      year: Some(2010),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_saXgTKNPaSu",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
      album_type: Single,
      year: Some(2014),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_wmSecJVDwPB",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UC7cl4MmM6ZZ2TcFyMk_b4pg"),
      album_type: Album,
      year: Some(2008),
      by_va: false,
    ),
  ],
  playlists: "[playlists]",
  similar_artists: "[artists]",
  tracks_playlist_id: Some("OLAK5uy_n6aX-F_lCQxgyTIv4FJhp78bXV93b9NUM"),
  videos_playlist_id: Some("OLAK5uy_nrePwvOEzmO7SydszEFfCDu8gAJxKfFtw"),
  radio_id: Some("RDEMdgjzN3Qrk_GD7BooQbkJ4A"),
)
