tests/snapshots/youtube__music_artist_no_artist_intl.snap
---
source: tests/youtube.rs
expression: artist
---
MusicArtist(
  id: "UCh8gHdtzO2tXd593_bjErWg",
  name: "[name]",
  header_image: "[header_image]",
  description: "[description]",
  wikipedia_url: "[wikipedia_url]",
  subscriber_count: "[subscriber_count]",
  tracks: "[tracks]",
  albums: [],
  playlists: "[playlists]",
  similar_artists: "[artists]",
  tracks_playlist_id: None,
  videos_playlist_id: None,
  radio_id: None,
)
